[tool.poetry]
name = "maildown"
version = "1.1.0"
description = "A super simple CLI for sending emails"
readme = "README.md"
authors = ["Christopher Davies <christopherdavies553@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cleo = "^0.7.2"
requests = "^2.21"
boto3 = "^1.9"
toml = "^0.10.0"
jinja2 = "^2.10"
mistune = "^0.8.4"
pygments = "^2.3"
premailer = "^3.4"
coverage = "^4.5"
mock = "^3.0"
mypy = "^0.701.0"
pytest-cov = "^2.7"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "4.4"

[tool.poetry.scripts]
maildown = "maildown:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
